@@ -1,3 +1,10 @@
+2004-06-30  Scott Smedley  <scottie7@tpg.com.au>
+
+	* fvwm/fvwm.1.in
+	Indicate optional window argument in section headings for
+	Key, Mouse, PointerKey & Stroke commands.
+	Remove strange "-Key" option listed for PointerKey.
+
 2004-06-29  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* libs/Fft.c (FftDrawString):
